# camera

./: README.md
calibrate/: CMakeLists.txt
calibrate/include/: Calibrate.h  config.h  pnpresult.msg
calibrate/src/: Calibration.cpp
location/: CMakeLists.txt
location/include/: location.h
location/install/: local_setup.sh  setup.sh
location/install/location_project/share/location_project/: package.bash  package.zsh
location/log/: latest_build
location/src/: location.cpp  location_double.cpp  location_main.cpp  test.cpp
serial/: CMakeLists.txt  package.xml
serial/include/: serial.hpp
serial/src/: serial.cpp  serial2.cpp  serial3.cpp  serial_node.cpp
tutorial_interfaces/: CMakeLists.txt  package.xml
tutorial_interfaces/install/: local_setup.sh  setup.sh
tutorial_interfaces/install/tutorial_inferfaces/include/tutorial_inferfaces/tutorial_inferfaces/msg/: detection.hpp  rosidl_typesupport_introspection_c__visibility_control.h
tutorial_interfaces/install/tutorial_inferfaces/include/tutorial_inferfaces/tutorial_inferfaces/msg/detail/: detection__builder.hpp  detection__functions.c  detection__rosidl_typesupport_fastrtps_c.h  detection__rosidl_typesupport_fastrtps_cpp.hpp  detection__rosidl_typesupport_introspection_c.h  detection__rosidl_typesupport_introspection_cpp.hpp  detection__struct.h  detection__struct.hpp  detection__traits.hpp  detection__type_support.c  detection__type_support.cpp  detection__type_support.hpp
tutorial_interfaces/install/tutorial_inferfaces/local/lib/python3.10/dist-packages/tutorial_inferfaces/: _tutorial_inferfaces_s.ep.rosidl_typesupport_fastrtps_c.c
tutorial_interfaces/install/tutorial_inferfaces/local/lib/python3.10/dist-packages/tutorial_inferfaces-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt
tutorial_interfaces/install/tutorial_inferfaces/local/lib/python3.10/dist-packages/tutorial_inferfaces/msg/: _detection_s.c
tutorial_interfaces/install/tutorial_inferfaces/share/tutorial_inferfaces/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
tutorial_interfaces/install/tutorial_inferfaces/share/tutorial_inferfaces/cmake/: ament_cmake_export_include_directories-extras.cmake  export_tutorial_inferfaces__rosidl_generator_cExport-noconfig.cmake  export_tutorial_inferfaces__rosidl_generator_cExport.cmake  export_tutorial_inferfaces__rosidl_generator_cppExport.cmake  export_tutorial_inferfaces__rosidl_generator_pyExport-noconfig.cmake  export_tutorial_inferfaces__rosidl_generator_pyExport.cmake  export_tutorial_inferfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_tutorial_inferfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  tutorial_inferfaces__rosidl_typesupport_cExport-noconfig.cmake  tutorial_inferfaces__rosidl_typesupport_cExport.cmake  tutorial_inferfaces__rosidl_typesupport_cppExport.cmake  tutorial_inferfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  tutorial_inferfaces__rosidl_typesupport_introspection_cExport.cmake
tutorial_interfaces/log/: latest_build
ui_design/: CMakeLists.txt  package.xml
ui_design/src/: MapVisualizer.cpp  MapVisualizer.h  test.cpp
yolov8decbytetrack/: CMakeLists.txt
yolov8decbytetrack/include/: BYTETracker.h  HikCamera.h  KalmanFilter.h  classes_all.txt
yolov8decbytetrack/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
yolov8decbytetrack/install/yolov8decbytetrack/share/yolov8decbytetrack/: package.bash  package.zsh
yolov8decbytetrack/log/: latest_build  latest_list
yolov8decbytetrack/msg/: Detection.msg
yolov8decbytetrack/src/: BYTETracker.cpp  HikCamera.cpp  STrack.cpp  inference.cpp  inference.h  inference_node.cpp  old_main.cpp  throw_main.cpp  trt_detect.cpp
